# research-os

./: .env.example  .env.pilot.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
.codex/: config.toml
alembic/: env.py
app/: __init__.py  main.py
config/: decomposition_policy.example.json  dev_source_payloads.example.json  model_routing_policy.example.json
docs/: 04_CODEX_RUNBOOK.md  07_TASK_BREAKDOWN_AND_MILESTONES.md  09_INSTITUTIONAL_MEMORY_AND_DASHBOARD.md  10_EXPORT_AND_SUBMISSION_PACK_ARCHITECTURE.md  11_PILOT_HARDENING_AUTH_STORAGE_RETRIEVAL.md  12_EXPORT_DELIVERY_HARDENING.md  14_PILOT_HOSTING_GITHUB_PAGES_RENDER.md  15_INTELLIGENCE_RETRIEVAL_PARTNER_QUALITY.md  app.js  dashboard.js  index.html  site-config.example.js  site-config.js  styles.css
pages/: index.html  site-config.js
project_docs/: 01_IMPLEMENTATION_BLUEPRINT.md  02_SYSTEM_CONTRACTS.md  03_ACCEPTANCE_CRITERIA.md  04_CODEX_RUNBOOK.md  05_MODEL_ROUTING_AND_BUDGET_POLICY.md  06_SECURITY_AND_GUARDRAILS.md  08_ARCHITECTURE_FOUNDATION.md  13_OPERATIONAL_LOOP_SCHEDULING_AND_NOTIFICATIONS.md  14_PILOT_HOSTING_GITHUB_PAGES_RENDER.md  16_POST_DEPLOY_TEST_CHECKLIST.md
prompts/: README.md  call_parser.md  reviewer_red_team.md
scripts/: docker-entrypoint.sh
tests/: conftest.py  test_api_dashboard_memory.py  test_api_dashboard_operations.py  test_api_decomposition.py  test_api_execution_runtime.py  test_api_export_detail.py  test_api_intelligence_quality.py  test_api_operational_loop.py  test_api_opportunities_matching.py  (+36 more)
(+124 files in other folders)
